apps/istio-addons/grafana/grafana-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: istio-system
spec:
  template:
    spec:
      containers:
        - name: grafana
