apps/istio-addons/grafana/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
    - mylocallab.local
  gateways:
    - argocd/generic-gateway
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana
            port:
              number: 3000
